<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="election"
            type="com.example.android.politicalpreparedness.model.Election" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{election.name}" />

        <!-- TODO: Add visual styling -->
        <androidx.cardview.widget.CardView
            android:id="@+id/reminderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/election_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@{election.electionDay.toString()}"
                    android:textSize="@dimen/text_size"
                    tools:text="12 November 2055" />

                <TextView
                    android:id="@+id/state_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@string/election_info"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/election_date" />

                <TextView
                    android:id="@+id/state_locations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@string/voting_location"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_header" />

                <TextView
                    android:id="@+id/state_ballot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@string/ballot_location"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_locations" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/address_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="state_correspondence_header,address" />

                <TextView
                    android:id="@+id/state_correspondence_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@string/correspondence_address"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_ballot" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@string/default_address"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintStart_toStartOf="@id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/follow_election_btn"
            style="@style/Launch_Button_Style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/follow_election"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>