<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin">

        <ImageView
            android:id="@+id/representative_photo"
            profileImage="@{representative.official.photoUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@string/representative_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_representative_office"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vice President of the United States" />

        <TextView
            android:id="@+id/tv_representative_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            tools:text="Kamala D. Harris" />

        <TextView
            android:id="@+id/tv_representative_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{representative.official.party}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_name"
            tools:text="Democratic Party" />

        <ImageView
            android:id="@+id/wwwIcon"
            style="@style/Image_Link_Style"
            android:contentDescription="@string/browse_link"
            app:layout_constraintEnd_toStartOf="@id/facebookIcon"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebookIcon"
            style="@style/Image_Link_Style"
            android:contentDescription="@string/facebook_link"
            app:layout_constraintEnd_toStartOf="@id/twitterIcon"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            style="@style/Image_Link_Style"
            android:contentDescription="@string/twitter_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_office"
            app:srcCompat="@drawable/ic_twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>